First pass at implementing some kind of sane military station behavior. It's in a usable state for testers.

--- a/localisation/ass_l_english.yml
+++ b/localisation/ass_l_english.yml
@@ -31,38 +31,55 @@ ASS_CPU_4_DESC: "An iterative improvement on the TM5200, this new model is a nat
 ASS_CPU_5: "TM7200"
 ASS_CPU_5_DESC: "The apex achievement of our research program. The TM7200 allows for 512-bit VLIW molecule processing at speeds thought impossible from a physics perspective."
 
-ASS_EXPANSION_ENERGY_1: "Energy Module"
-ASS_EXPANSION_WORMHOLE_1: "Wormhole Module"
-ASS_EXPANSION_MILITARY_1: "Military Module"
-ASS_EXPANSION_OBSERVATION_1: "Observation Module"
-ASS_EXPANSION_RESEARCH_1: "Research Module"
-ASS_EXPANSION_MINERALS_1: "Mineral Module"
-ASS_EXPANSION_ENERGY_2: "$ASS_EXPANSION_ENERGY_1$"
-ASS_EXPANSION_WORMHOLE_2: "$ASS_EXPANSION_WORMHOLE_1$"
-ASS_EXPANSION_MILITARY_2: "$ASS_EXPANSION_MILITARY_1$"
-ASS_EXPANSION_OBSERVATION_2: "$ASS_EXPANSION_OBSERVATION_1$"
-ASS_EXPANSION_RESEARCH_2: "$ASS_EXPANSION_RESEARCH_1$"
-ASS_EXPANSION_MINERALS_2: "$ASS_EXPANSION_MINERALS_1$"
+ass_card_1: "Expansion Card 1"
+ass_card_2: "Expansion Card 2"
+ASS_EXPANSION_MILITARY_1: "$ass_card_1$: $shipclass_military_station$"
+ASS_EXPANSION_OBSERVATION_1: "$ass_card_1$: $observation_station_plural$"
+ASS_EXPANSION_WORMHOLE_1: "$ass_card_1$: $wormhole_station_plural$"
+ASS_EXPANSION_RESEARCH_1: "$ass_card_1$: $research_station_plural$"
+ASS_EXPANSION_ENERGY_1: "$ass_card_1$: $mining_station_plural$ (Energy)"
+ASS_EXPANSION_MINERALS_1: "$ass_card_1$: $mining_station_plural$ (Mineral)"
+
+ASS_EXPANSION_MILITARY_2: "$ass_card_2$: $shipclass_military_station$"
+ASS_EXPANSION_OBSERVATION_2: "$ass_card_2$: $observation_station_plural$"
+ASS_EXPANSION_WORMHOLE_2: "$ass_card_2$: $wormhole_station_plural$"
+ASS_EXPANSION_RESEARCH_2: "$ass_card_2$: $research_station_plural$"
+ASS_EXPANSION_ENERGY_2: "$ass_card_2$: $mining_station_plural$ (Energy)"
+ASS_EXPANSION_MINERALS_2: "$ass_card_2$: $mining_station_plural$ (Mineral)"
 
 ASS_EXPANSION_SLOT_1: "The primary expansion slot in the onboard computers high-speed serial bus must contain the instruction module for the operation you wish to grant higher priority."
 ASS_EXPANSION_SLOT_2: "The secondary expansion slot can contain an instruction module, if you wish the onboard computer to switch tasks after it has completed all tasks detected by the card inserted into the first expansion slot."
 
-ASS_EXPANSION_WORMHOLE_1_DESC: "$ASS_EXPANSION_SLOT_1$\n\nThis module will scan colonized systems for Wormhole stations, and if it does not find one we control, it will direct the ship towards that solar system and construct a Wormhole station."
-ASS_EXPANSION_MILITARY_1_DESC: "$ASS_EXPANSION_SLOT_1$\n\nLocates any §H$ass_military_complex$§! constructed inside our borders, moves there to dismantle it and sets up a network of military stations in its place."
-ASS_EXPANSION_RESEARCH_1_DESC: "$ASS_EXPANSION_SLOT_1$\n\nScans all planetary objects inside our space for §YSpecial Resources§!, and then any colonized system for any orbital research deposits, and finally any high-yielding research deposits inside our borders - and constructs a Research Station at the location, if needed."
-ASS_EXPANSION_MINERALS_1_DESC: "$ASS_EXPANSION_SLOT_1$\n\nFinds any orbital mineral deposit in colonized systems, any high-yielding deposit inside our borders, or any minable special resource, and creates a Mining Station there if needed."
-ASS_EXPANSION_ENERGY_1_DESC: "$ASS_EXPANSION_SLOT_1$\n\nFinds any orbital energy deposit in colonized systems, any high-yielding deposit inside our borders, or any minable special resource, and creates a Mining Station there if needed."
+ASS_EXPANSION_WORMHOLE_1_DESC: "§WThis expansion card will scan colonized systems for Wormhole stations, and if it does not find one we control, it will direct the ship towards that solar system and construct a Wormhole station.§!\n\n$ASS_EXPANSION_SLOT_1$"
+ASS_EXPANSION_MILITARY_1_DESC: "§WLocates any §H$ass_military_complex_plural$§! constructed inside our borders, moves there to set up a network of military stations around it. Then, finds the closest colonized system without a military station, and builds one there.§!\n\n$ASS_EXPANSION_SLOT_1$"
+ASS_EXPANSION_RESEARCH_1_DESC: "§WScans all planetary objects inside our space for §YSpecial Resources§!, and then any colonized system for any orbital research deposits, and finally any high-yielding research deposits inside our borders - and constructs a Research Station at the location, if needed.§!\n\n$ASS_EXPANSION_SLOT_1$"
+ASS_EXPANSION_MINERALS_1_DESC: "§WFinds any orbital mineral deposit in colonized systems, any high-yielding deposit inside our borders, or any minable special resource, and creates a Mining Station there if needed.§!\n\n$ASS_EXPANSION_SLOT_1$"
+ASS_EXPANSION_ENERGY_1_DESC: "§WFinds any orbital energy deposit in colonized systems, any high-yielding deposit inside our borders, or any minable special resource, and creates a Mining Station there if needed.§!\n\n$ASS_EXPANSION_SLOT_1$"
 
-ASS_EXPANSION_WORMHOLE_2_DESC: "$ASS_EXPANSION_SLOT_2$\n\nCalculates distances between solar systems and attempts to find any that are on the edge of our jump range, and moves there to construct Wormhole Stations."
-ASS_EXPANSION_MILITARY_2_DESC: "$ASS_EXPANSION_SLOT_2$\n\nAttempts to construct and maintain a military station in each of our colonized solar systems."
-ASS_EXPANSION_RESEARCH_2_DESC: "$ASS_EXPANSION_SLOT_2$\n\nConstructs a Research Station at any orbital deposit that can benefit us."
-ASS_EXPANSION_MINERALS_2_DESC: "$ASS_EXPANSION_SLOT_2$\n\nConstructs a Mining Station at any orbital mineral deposit that can benefit us."
-ASS_EXPANSION_ENERGY_2_DESC: "$ASS_EXPANSION_SLOT_2$\n\nConstructs a Mining Station at any orbital energy deposit that can benefit us."
+ASS_EXPANSION_WORMHOLE_2_DESC: "§WCalculates distances between solar systems and attempts to find any that are on the edge of our jump range, and moves there to construct Wormhole Stations.§!\n\n$ASS_EXPANSION_SLOT_2$"
+ASS_EXPANSION_MILITARY_2_DESC: "§WAttempts to construct a military station in§! §Revery star system within our borders§!§W.§!\n\n$ASS_EXPANSION_SLOT_2$"
+ASS_EXPANSION_RESEARCH_2_DESC: "§WConstructs a Research Station at any orbital deposit that can benefit us.§!\n\n$ASS_EXPANSION_SLOT_2$"
+ASS_EXPANSION_MINERALS_2_DESC: "§WConstructs a Mining Station at any orbital mineral deposit that can benefit us.§!\n\n$ASS_EXPANSION_SLOT_2$"
+ASS_EXPANSION_ENERGY_2_DESC: "§WConstructs a Mining Station at any orbital energy deposit that can benefit us.§!\n\n$ASS_EXPANSION_SLOT_2$"
 ASS_EXPANSION_EMPTY: "No expansion card in the second slot."
 
-ASS_OBS_DESC: "Places Observation Posts in orbit of any primitive civilization inside our borders."
-ASS_EXPANSION_OBSERVATION_1_DESC: "$ASS_EXPANSION_SLOT_1$\n\n$ASS_OBS_DESC$"
-ASS_EXPANSION_OBSERVATION_2_DESC: "$ASS_EXPANSION_SLOT_2$\n\n$ASS_OBS_DESC$$"
+ASS_OBS_DESC: "§WPlaces Observation Posts in orbit of any primitive civilization inside our borders.§!\n\n"
+ASS_EXPANSION_OBSERVATION_1_DESC: "$ASS_OBS_DESC$$ASS_EXPANSION_SLOT_1$"
+ASS_EXPANSION_OBSERVATION_2_DESC: "$ASS_OBS_DESC$$ASS_EXPANSION_SLOT_2$"
+
+ASS_TYPE_SMALL: "$military_station_small$"
+ASS_TYPE_SMALL_DESC: "Instructs the §HAutonomous Assemblers§! to construct $military_station_small_plural$ at this marker."
+ASS_TYPE_MEDIUM: "$military_station_medium$"
+ASS_TYPE_MEDIUM_DESC: "Instructs the §HAutonomous Assemblers§! to construct $military_station_medium_plural$ at this marker."
+ASS_TYPE_LARGE: "$military_station_large$"
+ASS_TYPE_LARGE_DESC: "Instructs the §HAutonomous Assemblers§! to construct $military_station_large_plural$ at this marker."
+ASS_TYPE_XLARGE: "$military_station_xlarge$"
+ASS_TYPE_XLARGE_DESC: "Instructs the §HAutonomous Assemblers§! to construct $military_station_xlarge_plural$ at this marker."
+
+tech_ass_hexagon: "Military Station Complex"
+tech_ass_hexagon_desc: "Allows properly outfitted §HAutonomous Assemblers§! to construct vast military defense installations."
+tech_ass_hexagon_unlock_title: "§HUnlocks Station:§! Station Marker"
+tech_ass_hexagon_unlock_desc: "Constructing a §HStation Marker§! allows §HAutonomous Assemblers§! equipped with a $ASS_EXPANSION_MILITARY_1$ in its §Pprimary expansion slot§! to autonomously build a large military station complex in much denser formation than would usually be possible."
 
 # Mod menu
 autonomous_assembler_modmenu: "§YAutonomous Assembler ...§!"
@@ -85,7 +102,7 @@ ass_go_home: "Set course for colony"
 ass_go_home_DESC: "Call out to all §HAutonomous Assemblers§! with an encrypted message instructing them to locate the nearest of our colonies and dock there. The ones that get the message, will do so and be instructed to stay there for §G3 months§!. Any §HAutonomous Assemblers§! we build inside the next 3 months will also stay docked for 3 months after they are built."
 
 ass_increase_reserve: "Increase reserve"
-ass_increase_reserve_DESC: "Send out a new value to all §HAutonomous Assemblers§! that they should halt production of anything unless the empire has at least §G[root.AssReserves] + 500§! £minerals minerals in reserve, plus the cost of any operation they might have pending."
+ass_increase_reserve_DESC: "Send out a new value to all §HAutonomous Assemblers§! that they should halt production of anything unless the empire has at least §G[root.AssReserve] + 500§! £minerals minerals in reserve, plus the cost of any operation they might have pending."
 
 ass_decrease_reserve: "Decrease reserve"
-ass_decrease_reserve_DESC: "Decrease the mandated reserve, and send out an encrypted subspace message to all §HAutonomous Assemblers§! that they may begin an operation provided the empires mineral reserves amount to §G[root.AssReserves] - 500§! £minerals, plus the cost of any operation they have pending."
+ass_decrease_reserve_DESC: "Decrease the mandated reserve, and send out an encrypted subspace message to all §HAutonomous Assemblers§! that they may begin an operation provided the empires mineral reserves amount to §G[root.AssReserve] - 500§! £minerals, plus the cost of any operation they have pending."
