Add localisation files for other languages.

--- a/localisation/ass_l_russian.yml
+++ b/localisation/ass_l_russian.yml
@@ -1,10 +1,10 @@
-﻿l_english:
+﻿#l_english:
 #l_spanish:
 #l_french:
 #l_german:
 #l_braz_por:
 #l_polish:
-#l_russian:
+l_russian:
 
 ###
 # This file is part of a project hosted at https://github.com/stellaris-mods
